resources/2020/css/_box.scss
.box {
  background: darken($color: $color-background, $amount: 1.5);
  height: 100%;
  padding: rem-calc(20px);
  display: flex;
  flex-direction: column;

  @include media-breakpoint-up(md) {
    padding: rem-calc(25px) rem-calc(30px);
  }
}

.box--large {
  @include media-breakpoint-up(md) {
    padding: rem-calc(30px) rem-calc(40px);
  }
}

.box__text {
  &:not(:last-child) {
    margin-bottom: rem-calc(20px);

    @include media-breakpoint-up(md) {
      margin-bottom: rem-calc(30px);
    }
  }
}

.box__text-hashtags {
  font-size: rem-calc(14px);
  margin-bottom: 10px;

  @include media-breakpoint-up(md) {
    font-size: rem-calc(16px);
  }
}

.box__text-heading {
  font-family: $font-family-heading;
  font-size: rem-calc(22px);
  font-weight: 700;
  line-height: 1.2;
  color: $color-heading;

  &:not(:last-child) {
    margin-bottom: 7px;

    @include media-breakpoint-up(md) {
      margin-bottom: 10px;
    }
  }

  @include media-breakpoint-up(md) {
    font-size: rem-calc(26px);
  }

  .box--large & {
    font-size: rem-calc(26px);

    @include media-breakpoint-up(md) {
      font-size: rem-calc(32px);
    }
  }
}

.box__text-content {
  line-height: 1.8;
  letter-spacing: (0.4em / 16);

  @include media-breakpoint-down(sm) {
    font-size: 14px;
  }

  &:not(:last-child),
  p:not(:last-child) {
    margin-bottom: rem-calc(10px);

    @include media-breakpoint-up(md) {
      margin-bottom: rem-calc(15px);
    }
  }
}

.box__text-links {
  &:not(:last-child) {
    margin-bottom: rem-calc(15px);

    @include media-breakpoint-up(md) {
      margin-bottom: rem-calc(20px);
    }
  }

  a {
    @extend .icon-link;
    font-size: rem-calc(16px);

    @include media-breakpoint-up(md) {
      font-size: rem-calc(20px);
    }

    &:not(:last-child) {
      margin-right: rem-calc(15px);

      @include media-breakpoint-up(md) {
        margin-right: rem-calc(20px);
      }
    }
  }
}

.box__people:not(.box__people--inline) {
  flex-grow: 1;
  margin-bottom: rem-calc(-15px);

  @include media-breakpoint-up(md) {
    margin-bottom: rem-calc(-20px);
  }

  &:not(:last-child) {
    padding-bottom: rem-calc(25px);
    
    @include media-breakpoint-up(md) {
      padding-bottom: rem-calc(30px);
    }
  }
}

.box__people--inline {
  @include media-breakpoint-up(md) {
    display: flex;
    flex-wrap: wrap;
    align-items: center;
    justify-content: space-between;
  }
}

.box__person {
  display: flex;
  align-items: center;
  margin-bottom: rem-calc(15px);

  @include media-breakpoint-up(md) {
    margin-bottom: rem-calc(20px);
  }

  .box--speaker & {
    flex-direction: column;
    text-align: center;
  }
}

.box__people--inline .box__person {
  @include media-breakpoint-up(md) {
    width: calc(50% - #{rem-calc(15px)});
  }
}

.box__person-img {
  border-radius: 50%;
  width: rem-calc(65px);
  height: auto;
  margin-right: rem-calc(10px);

  @include media-breakpoint-up(md) {
    width: rem-calc(70px);
    margin-right: rem-calc(15px);
  }

  .box--large & {
    width: rem-calc(70px);
    margin-right: rem-calc(15px);

    @include media-breakpoint-up(md) {
      width: rem-calc(90px);
      margin-right: rem-calc(20px);
    }
  }

  .box--speaker & {
    width: rem-calc(200px);
    margin-right: 0;
    margin-bottom: rem-calc(30px);

    @include media-breakpoint-up(xl) {
      width: rem-calc(250px);
    }
  }
}

.box__person-name {
  font-family: $font-family-heading;
  font-size: rem-calc(20px);
  font-weight: 700;
  line-height: 1;
  text-decoration: none !important;
  color: $color-heading;
  margin: -5px 0 3px;

  @include media-breakpoint-up(md) {
    font-size: rem-calc(22px);
  }

  .box--large & {
    font-size: rem-calc(22px);

    @include media-breakpoint-up(md) {
      font-size: rem-calc(26px);
    }
  }

  .box--speaker & {
    font-size: rem-calc(26px);
    margin-bottom: rem-calc(5px);

    @include media-breakpoint-up(md) {
      font-size: rem-calc(32px);
    }
  }
}

.box__person-affiliation {
  font-family: $font-family-heading;
  font-size: rem-calc(16px);
  font-weight: 300;
  line-height: 1;
  color: $color-heading;

  @include media-breakpoint-up(md) {
    font-size: rem-calc(18px);
  }

  .box--large & {
    font-size: rem-calc(18px);

    @include media-breakpoint-up(md) {
      font-size: rem-calc(22px);
    }

    &:not(:last-child) {
      margin-bottom: rem-calc(7px);

      @include media-breakpoint-up(md) {
        margin-bottom: rem-calc(10px);
      }
    }
  }

  &:not(:last-child) {
    margin-bottom: rem-calc(7px);
  }

  .box--speaker & {
    font-size: rem-calc(22px);

    @include media-breakpoint-up(md) {
      font-size: rem-calc(26px);
    }
  }
}

.box__person-links {
  .box--speaker & {
    font-size: rem-calc(18px);

    @include media-breakpoint-up(md) {
      font-size: rem-calc(22px);
    }
  }

  a {
    @extend .icon-link;

    &:not(:last-child) {
      margin-right: rem-calc(10px);
    }
  }
}

.box__talk-info {
  display: flex;
  color: white;
  font-weight: bold;
  margin-bottom: rem-calc(20px);

  &:last-child {
    margin-bottom: rem-calc(-5px);
  }
}

.box__talk-datetime {
  margin-left: rem-calc(20px);
}

